--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/psr7": "1.*",
+        "irazasyed/telegram-bot-sdk": "^3.4.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "mpdf/mpdf": "^8.0"
