--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/psr7": "1.*",
+        "iio/libmergepdf": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.4.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
